--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
-    "sass-loader": "^7.1.0",
     "select2": "^4.0.6-rc.1",
     "star-rating-svg": "^3.5.0",
     "style-loader": "0.19.0",
@@ -96,7 +95,9 @@
     "react-test-renderer": "^16.4.2",
     "react-testing-library": "^3.1.7",
     "redux-logger": "^3.0.6",
-    "redux-mock-store": "^1.5.3"
+    "redux-mock-store": "^1.5.3",
+    "node-sass": "^4.9.4",
+    "sass-loader": "^7.1.0"
   },
   "jest": {
     "collectCoverageFrom": [
