--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node-sass": "^4.9.4",
     "oauthio-web": "^0.6.2",
     "object-assign": "4.1.1",
+    "popper.js": "^1.14.4",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "primeicons": "^1.0.0-beta.10",
@@ -62,6 +63,8 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-select": "^2.0.0",
+    "react-slick": "^0.23.2",
+    "react-stars": "^2.2.5",
     "react-transition-group": "^2.4.0",
     "react-twitter-auth": "0.0.11",
     "react-validation": "^3.0.7",
