--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.4.3",
+    "aphrodite": "^2.2.3",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel-core": "6.26.0",
@@ -57,6 +58,7 @@
     "react-google-map": "^3.1.1",
     "react-images": "^0.5.19",
     "react-localize-redux": "^3.3.0",
+    "react-password-strength": "^2.3.1",
     "react-places-autocomplete": "^7.2.0",
     "react-radio-group": "^3.0.3",
     "react-redux": "^5.0.7",
