--- a/package.json
+++ b/package.json
@@ -26,17 +26,19 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
-    "extract-text-webpack-plugin": "3.0.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "1.1.5",
     "font-awesome": "^4.7.0",
     "fs-extra": "3.0.1",
     "google-maps-react": "^2.0.2",
     "html-webpack-plugin": "2.29.0",
+    "install": "^0.12.2",
     "jest": "20.0.4",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "node-sass": "^4.9.4",
+    "npm": "^6.4.1",
     "oauthio-web": "^0.6.2",
     "object-assign": "4.1.1",
     "popper.js": "^1.14.4",
@@ -70,6 +72,7 @@
     "react-transition-group": "^2.4.0",
     "react-twitter-auth": "0.0.11",
     "react-validation": "^3.0.7",
+    "react-with-direction": "^1.3.0",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
@@ -82,6 +85,7 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
+    "webpack-rtl-plugin": "^1.7.0",
     "whatwg-fetch": "2.0.3",
     "xhr2": "^0.1.4",
     "xmlhttprequest": "^1.8.0"
