--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-google-map": "^3.1.1",
     "react-images": "^0.5.19",
     "react-localize-redux": "^3.3.0",
+    "react-owl-carousel": "^2.3.1",
     "react-password-strength": "^2.3.1",
     "react-places-autocomplete": "^7.2.0",
     "react-radio-group": "^3.0.3",
