--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-twitter-auth": "0.0.11",
     "react-validation": "^3.0.7",
     "react-with-direction": "^1.3.0",
+    "reactstrap": "^6.5.0",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
