--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-places-autocomplete": "^7.2.0",
     "react-radio-group": "^3.0.3",
     "react-redux": "^5.0.7",
+    "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-select": "^2.1.2",
