--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "fs-extra": "3.0.1",
     "google-maps-react": "^2.0.2",
     "html-webpack-plugin": "2.29.0",
+    "immutability-helper": "^2.9.0",
     "install": "^0.12.2",
     "jest": "20.0.4",
     "jquery": "^3.3.1",
