--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "reactstrap": "^6.5.0",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "select2": "^4.0.6-rc.1",
