added google image

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "npm": "^6.4.1",
     "oauthio-web": "^0.6.2",
     "object-assign": "4.1.1",
-    "popper.js": "^1.14.4",
+    "popper.js": "^1.14.6",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "primeicons": "^1.0.0-beta.10",
@@ -105,6 +105,7 @@
     "axios-mock-adapter": "^1.15.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "fast-sass-loader": "^1.4.7",
     "google-maps": "^3.2.1",
     "node-sass": "^4.11.0",
     "react-test-renderer": "^16.4.2",
