--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.6",
     "@material-ui/core": "^1.4.3",
     "aphrodite": "^2.2.3",
     "autoprefixer": "7.1.6",
@@ -71,6 +72,7 @@
     "react-router-redux": "^4.0.8",
     "react-select": "^2.1.2",
     "react-slick": "^0.23.2",
+    "react-spinners": "^0.5.1",
     "react-stars": "^2.2.5",
     "react-transition-group": "^2.4.0",
     "react-twitter-auth": "0.0.11",
