--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-select": "^2.1.2",
+    "react-sidebar": "^3.0.2",
     "react-slick": "^0.23.2",
     "react-spinners": "^0.5.1",
     "react-stars": "^2.2.5",
