--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "aphrodite": "^2.2.3",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
-    "babel-core": "6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
@@ -33,12 +33,13 @@
     "font-awesome": "^4.7.0",
     "fs-extra": "3.0.1",
     "google-maps-react": "^2.0.2",
+    "html-react-parser": "^0.6.1",
     "html-webpack-plugin": "2.29.0",
     "immutability-helper": "^2.9.0",
     "install": "^0.12.2",
     "jest": "20.0.4",
     "jquery": "^3.3.1",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "npm": "^6.4.1",
     "oauthio-web": "^0.6.2",
@@ -95,7 +96,7 @@
     "webpack": "^3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "webpack-rtl-plugin": "^1.7.0",
+    "webpack-rtl-plugin": "^1.8.0",
     "whatwg-fetch": "2.0.3",
     "xhr2": "^0.1.4",
     "xmlhttprequest": "^1.8.0"
@@ -108,8 +109,8 @@
   "devDependencies": {
     "@types/jest": "^22.2.3",
     "axios-mock-adapter": "^1.15.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "fast-sass-loader": "^1.4.7",
     "google-maps": "^3.2.1",
     "node-sass": "^4.11.0",
