--- a/package.json
+++ b/package.json
@@ -104,7 +104,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "build:prod": "npm run build && node scripts/move.js"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
@@ -118,7 +119,8 @@
     "react-testing-library": "^3.1.7",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "shelljs": "^0.8.3"
   },
   "jest": {
     "collectCoverageFrom": [
