--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
+    "bootstrap": "^4.3.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.6",
@@ -41,7 +42,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
-    "npm": "^6.4.1",
+    "npm": "^6.8.0",
     "oauthio-web": "^0.6.2",
     "object-assign": "4.1.1",
     "popper.js": "^1.14.6",
@@ -56,6 +57,7 @@
     "raf": "3.4.0",
     "react": "^16.4.2",
     "react-addons-update": "^15.6.2",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-facebook-login": "^4.0.1",
