--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
-    "npm": "^6.4.1",
     "oauthio-web": "^0.6.2",
     "object-assign": "4.1.1",
     "popper.js": "^1.14.6",
@@ -73,6 +72,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-select": "^2.1.2",
+    "react-sidebar": "^3.0.2",
     "react-slick": "^0.23.2",
     "react-spinners": "^0.5.1",
     "react-stars": "^2.2.5",
