--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-facebook-login": "^4.0.1",
+    "react-ga": "^2.5.7",
     "react-google-login": "^3.2.1",
     "react-google-map": "^3.1.1",
     "react-hover-observer": "^2.1.1",
