--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-slick": "^0.23.2",
     "react-spinners": "^0.5.1",
     "react-stars": "^2.2.5",
+    "react-sticky": "^6.0.3",
     "react-transition-group": "^2.4.0",
     "react-twitter-auth": "0.0.11",
     "react-validation": "^3.0.7",
