--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "select2": "^4.0.6-rc.1",
+    "socket.io-client": "^2.2.0",
     "star-rating-svg": "^3.5.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
