--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "webpack-manifest-plugin": "1.3.2",
     "webpack-rtl-plugin": "^1.8.0",
     "whatwg-fetch": "2.0.3",
+    "workbox-webpack-plugin": "^4.3.1",
     "xhr2": "^0.1.4",
     "xmlhttprequest": "^1.8.0"
   },
