--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .env
-/public/css/**/*.map
-/public/css/**/main.css
-/public/css/**/main-ar.css
+public/css/**/*.map
+public/css/**/main.css
+public/css/**/main-ar.css
