--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .env
-public/css/**/*.map
-public/css/**/main.css
-public/css/**/main-ar.css
+public/css/main
+public/css/main-ar
