--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "react-ga": "^2.5.7",
     "react-google-login": "^3.2.1",
     "react-google-map": "^3.1.1",
+    "react-google-tag-manager": "^2.2.1",
+    "react-gtm-module": "^2.0.7",
     "react-hover-observer": "^2.1.1",
     "react-id-swiper": "^1.6.8",
     "react-images": "^0.5.19",
@@ -82,6 +84,7 @@
     "react-spinners": "^0.5.1",
     "react-stars": "^2.2.5",
     "react-sticky": "^6.0.3",
+    "react-tag-manager": "^3.0.0",
     "react-transition-group": "^2.4.0",
     "react-twitter-auth": "0.0.11",
     "react-validation": "^3.0.7",
