--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "npm": "^6.8.0",
     "oauthio-web": "^0.6.2",
     "object-assign": "4.1.1",
-    "popper.js": "^1.14.6",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "primeicons": "^1.0.0-beta.10",
@@ -80,6 +79,7 @@
     "react-router-redux": "^4.0.8",
     "react-select": "^2.1.2",
     "react-sidebar": "^3.0.2",
+    "react-simple-popover": "^0.2.4",
     "react-slick": "^0.23.2",
     "react-spinners": "^0.5.1",
     "react-stars": "^2.2.5",
