--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fernet": "^0.3.1",
     "file-loader": "1.1.5",
     "font-awesome": "^4.7.0",
+    "formik": "^2.1.2",
     "fs-extra": "3.0.1",
     "google-maps-react": "^2.0.2",
     "html-react-parser": "^0.6.1",
@@ -52,10 +53,10 @@
     "qs": "^6.5.2",
     "query-string": "^6.1.0",
     "raf": "3.4.0",
-    "react": "^16.4.2",
+    "react": "^16.12.0",
     "react-addons-update": "^15.6.2",
     "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.4.2",
+    "react-dom": "^16.12.0",
     "react-facebook-login": "^4.0.1",
     "react-ga": "^2.5.7",
     "react-google-login": "^3.2.1",
@@ -106,7 +107,8 @@
     "whatwg-fetch": "2.0.3",
     "workbox-webpack-plugin": "^4.3.1",
     "xhr2": "^0.1.4",
-    "xmlhttprequest": "^1.8.0"
+    "xmlhttprequest": "^1.8.0",
+    "yup": "^0.28.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -121,7 +123,7 @@
     "enzyme-adapter-react-16": "^1.9.1",
     "fast-sass-loader": "^1.4.7",
     "google-maps": "^3.2.1",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "react-test-renderer": "^16.4.2",
     "react-testing-library": "^3.1.7",
     "redux-logger": "^3.0.6",
